fixed error mistake on Dining age with JS file fixed errors on IE browser

--- a/hoteldining_content.css
+++ b/hoteldining_content.css
@@ -3,13 +3,14 @@
 }
 
 .hotel--dining_images {
-    width: 25%;
-    height: 30%;
+    width: 100%;
+    height: 5%;
     display: flex;
+    flex-wrap: nowrap;
 }
 
 .hotel--dining_images img {
-    width: 100%;
+    width: 25%;
     border-radius: 25%;
 }
 
